čištění, aktualizace a optimalizace kodu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <!--CSS-->
     <link rel="stylesheet" href="css/zerogrid.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/zerostyle.css">
 
     <!--Custom Fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
@@ -29,7 +28,7 @@
 <div class="wrap-body">
 
     <!--Top button-->
-    <a href="#" id="toTop">
+    <a href="#" id="toTop" >
         <span class="material-symbols-outlined">arrow_upward</span>
     </a>
 
@@ -45,7 +44,7 @@
                 <li><a href="#contacts">Kontakty</a></li>
             </ul>
             <div class="main-header">
-                <div class="zerogrid">
+                <div class="zerogrid" style="width: 100%;">
                     <h1>Four hands</h1>
                 </div>
             </div>
@@ -55,7 +54,7 @@
     <section id="container">
         <div class="wrap-container">
             <section class="content-box boxstyle-3 box-3">
-                <div class="zerogrid" id="about">
+                <div class="zerogrid" style="width: 100%;" id="about">
                     <div class="row wrap-box">
                         <h3>O nás</h3>
                         <img src="images/story.jpg" alt="Historie Four Hands">
@@ -82,7 +81,7 @@
             </section>
 
             <section class="content-box boxstyle-1 box-4">
-                <div class="zerogrid" id="performance">
+                <div class="zerogrid" style="width: 100%;" id="performance">
                     <div class="row wrap-box">
                         <div class="header">
                             <div class="wrapper">
@@ -150,7 +149,7 @@
             </section>
 
             <section class="content-box boxstyle-1 box-1">
-                <div class="zerogrid">
+                <div class="zerogrid" style="width: 100%;">
                     <div class="row wrap-box">
                         <div class="col-1-2">
                             <div class="wrap-col">
@@ -236,7 +235,7 @@
             </section>
 
             <section class="content-box boxstyle-1 box-4">
-                <div class="zerogrid" id="program">
+                <div class="zerogrid" style="width: 100%;" id="program">
                     <div class="row wrap-box">
                         <div class="header">
                             <div class="wrapper">
@@ -291,7 +290,7 @@
                                             <div class="item-caption-inner1"></div>
                                         </div>
                                     </div>
-                                    <img src="images/kids2-thumb.jpg"/>
+                                    <img src="images/kids2-thumb.jpg" alt="image"/>
                                 </div>
                             </div>
                             <div class="col-1-3">
@@ -301,7 +300,7 @@
                                             <div class="item-caption-inner1"></div>
                                         </div>
                                     </div>
-                                    <img src="images/kids3-thumb.jpg"/>
+                                    <img src="images/kids3-thumb.jpg" alt="image">
                                 </div>
                             </div>
                             <div class="col-1-3">
@@ -312,7 +311,7 @@
                                         </div>
                                     </div>
 
-                                    <img src="images/kids4-thumb.jpg"/>
+                                    <img src="images/kids4-thumb.jpg" alt="image">
                                 </div>
                             </div>
                         </div>
@@ -325,7 +324,7 @@
                                             <div class="item-caption-inner1"></div>
                                         </div>
                                     </div>
-                                    <img src="images/kids5-thumb.jpg"/>
+                                    <img src="images/kids5-thumb.jpg" alt="image">
                                 </div>
                             </div>
                             <div class="col-1-3">
@@ -335,7 +334,7 @@
                                             <div class="item-caption-inner1"></div>
                                         </div>
                                     </div>
-                                    <img src="images/kids6-thumb.jpg"/>
+                                    <img src="images/kids6-thumb.jpg" alt="image">
                                 </div>
                             </div>
                             <div class="col-1-3">
@@ -345,7 +344,7 @@
                                             <div class="item-caption-inner1"></div>
                                         </div>
                                     </div>
-                                    <img src="images/kids7-thumb.jpg"/>
+                                    <img src="images/kids7-thumb.jpg" alt="image">
                                 </div>
                             </div>
                         </div>
@@ -358,7 +357,7 @@
                                             <div class="item-caption-inner1"></div>
                                         </div>
                                     </div>
-                                    <img src="images/kids1-thumb.jpg"/>
+                                    <img src="images/kids1-thumb.jpg" alt="image">
                                 </div>
                             </div>
                             <div class="col-1-3">
@@ -368,7 +367,7 @@
                                             <div class="item-caption-inner1"></div>
                                         </div>
                                     </div>
-                                    <img src="images/kids8-thumb.jpg"/>
+                                    <img src="images/kids8-thumb.jpg" alt="image">
                                 </div>
                             </div>
                             <div class="col-1-3">
@@ -378,7 +377,7 @@
                                             <div class="item-caption-inner1"></div>
                                         </div>
                                     </div>
-                                    <img src="images/kids9-thumb.jpg"/>
+                                    <img src="images/kids9-thumb.jpg" alt="image">
                                 </div>
                             </div>
                         </div>
@@ -387,7 +386,7 @@
             </section>
 
             <section class="content-box boxstyle-1 box-4">
-                <div class="zerogrid" id="videogallery">
+                <div class="zerogrid" style="width: 100%;" id="videogallery">
                     <div class="row wrap-box">
                         <div class="header">
                             <div class="wrapper">
@@ -399,7 +398,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids3-thumb.jpg"/>
+                                        <img src="images/kids3-thumb.jpg" alt="image">
                                     </div>
 
                                     <div class="item-content">
@@ -414,7 +413,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids4-thumb.jpg"/>
+                                        <img src="images/kids4-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>P. I.Čajkovskij Labutí jezero: Předehra</span>
@@ -428,7 +427,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids3-thumb.jpg"/>
+                                        <img src="images/kids3-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Aram Chačaturjan - Šavlový tanec</span>
@@ -442,7 +441,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids2-thumb.jpg"/>
+                                        <img src="images/kids2-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>P. I. Čajkovskij - Louskáček (Tanec cukrové víly)</span>
@@ -454,7 +453,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids3-thumb.jpg"/>
+                                        <img src="images/kids3-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Slovanský tanec Č. 1 C dur Presto (Furiant), I. řada (op. 46)</span>
@@ -468,7 +467,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids4-thumb.jpg"/>
+                                        <img src="images/kids4-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Slovanský tanec Č. 2 e moll Allegretto scherzando (Dumka), I. řada (op. 46)</span>
@@ -482,7 +481,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids3-thumb.jpg"/>
+                                        <img src="images/kids3-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Slovanský tanecČ. 5 A dur Allegro vivace (Skočná), I. řada (op.46)</span>
@@ -493,7 +492,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids4-thumb.jpg"/>
+                                        <img src="images/kids4-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Slovanský tanec Č. 7 c moll Allegro assai (Skočná), I. řada (op.46)</span>
@@ -504,7 +503,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids3-thumb.jpg"/>
+                                        <img src="images/kids3-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Slovanský tanec Č. 8 g moll Presto (Furiant), I. řada (op. 46)</span>
@@ -519,7 +518,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids2-thumb.jpg"/>
+                                        <img src="images/kids2-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Bedřich Smetana - Má vlast: Tábor</span>
@@ -532,7 +531,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids2-thumb.jpg"/>
+                                        <img src="images/kids2-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Bedřich Smetana - Má vlast: Z českých luhů a hájů</span>
@@ -546,7 +545,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids2-thumb.jpg"/>
+                                        <img src="images/kids2-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Bedřich Smetana - Má vlast : Šárka</span>
@@ -560,7 +559,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids2-thumb.jpg"/>
+                                        <img src="images/kids2-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Bedřich Smetana - Má vlast: Vltava</span>
@@ -574,7 +573,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids2-thumb.jpg"/>
+                                        <img src="images/kids2-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Bedřich Smetana - Má vlast: Blaník</span>
@@ -589,7 +588,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col item">
                                     <div class="zoom-container">
-                                        <img src="images/kids2-thumb.jpg"/>
+                                        <img src="images/kids2-thumb.jpg" alt="image">
                                     </div>
                                     <div class="item-content">
                                         <span>Bedřich Smetana - Má vlast: Vyšehrad</span>
@@ -606,7 +605,7 @@
             </section>
 
             <section class="content-box boxstyle-1 box-6">
-                <div class="zerogrid" id="contacts">
+                <div class="zerogrid" style="width: 100%;" id="contacts">
                     <div class="row wrap-box">
                         <div class="header">
                             <div class="wrapper">
@@ -658,7 +657,6 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20508.886079777625!2d14.498858650918255!3d50.018650419299036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b9200c9bb0239%3A0x41953c690fdc5935!2s149%2000%20%C3%9Ajezd%20u%20Pr%C5%AFhonic!5e0!3m2!1sru!2scz!4v1677413511727!5m2!1sru!2scz"
                     width="100%" height="350px" style="border: 0;" allowfullscreen loading="lazy"></iframe>
         </div>
-
         <div class="wrap-footer">
             <div class="zerogrid">
                 <div class="row">
@@ -674,23 +672,14 @@
     <script>
         $(function () {
             $.fn.scrollToTop = function () {
-                $(this).hide().removeAttr("href");
+                var $btn = $(this);
+                $btn.hide();
 
-                if ($(window).scrollTop() !== 0) {
-                    $(this).fadeIn("slow");
-                }
-
-                var scrollDiv = $(this);
-
-                $(window).scroll(function () {
-                    if ($(window).scrollTop() === 0) {
-                        $(scrollDiv).fadeOut("slow");
-                    } else {
-                        $(scrollDiv).fadeIn("slow");
-                    }
+                $(window).on("scroll", function () {
+                    $(this).scrollTop() > 100 ? $btn.fadeIn("slow") : $btn.fadeOut("slow");
                 });
 
-                $(this).on("click", function (e) {
+                $btn.on("click", function (e) {
                     e.preventDefault();
                     $("html, body").animate({ scrollTop: 0 }, "slow");
                 });
@@ -698,7 +687,9 @@
                 return this;
             };
 
-            $("#toTop").scrollToTop();
+            if ($("#toTop").length) {
+                $("#toTop").scrollToTop();
+            }
         });
 
         $(document).ready(() => {
@@ -707,6 +698,8 @@
                 var target = $(this).attr("href");
                 if ($(target).length) {
                     $("html, body").animate({ scrollTop: $(target).offset().top }, 1500);
+                } else {
+                    console.warn("Элемент не найден: " + target);
                 }
             });
         });
