--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                             <div class="col-1-3">
                                 <div class="wrap-col">
                                     <i class="fa fa-envelope"></i>
-                                    <h3>Naše e-maily</h3>
+                                    <h3>E-maily</h3>
                                     <p>
                                         <span>Irina:</span>
                                         <a href="mailto:cherkashynairina@gmail.com">cherkashynairina@gmail.com</a><br>
