--- a/index.html
+++ b/index.html
@@ -648,14 +648,14 @@
     </section>
 
     <!--Footer-->
-    <footer>
+    <footer >
         <div class="embed-container maps">
             <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20508.886079777625!2d14.498858650918255!3d50.018650419299036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b9200c9bb0239%3A0x41953c690fdc5935!2s149%2000%20%C3%9Ajezd%20u%20Pr%C5%AFhonic!5e0!3m2!1sru!2scz!4v1677413511727!5m2!1sru!2scz"
                     width="100%" height="350px" style="border: 0;" allowfullscreen loading="lazy"></iframe>
         </div>
-        <div class="wrap-footer">
-            <div class="zerogrid">
+        <div class="wrap-footer" >
+            <div class="zerogrid" style="width: 100%;">
                 <div class="row">
                     <span>Copyright 2023 Four hands. Všechna práva vyhrazena.</span>
                 </div>
