fix sekce about

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <div class="wrap-col">
                                 <h1>Kateřina<br>Konopová</h1>
                                 <img src="images/joanna.jpg" alt="foto">
-                                <p>Kateřina Konopová (roz. Turková) je rodačka z Opavy, kde navštěvovala místní
+                                <p>Kateřina Konopová (roz. Turková) je rodačka z Opavy, kde navštěvovala místní
                                     ZUŠ pod vedením Mgr. Oriany Šenfeldové. Dále absolvovala Janáčkovu
                                     konzervatoř v Ostravě a Institut pro umělecká studia Ostravské univerzity
                                     pod vedením profesorky Marty Toaderové. Poté úspěšně ukončila doktorandské
@@ -163,9 +163,9 @@
                                     Master Competition ve Varšavě (2019 a 2022) a 1. cenu v Art-duo Competition
                                     v Barceloně (2019). V roce 2005 získala 2. cenu na The First Henri Selmer
                                     Bass Clarinet Competition v Rotterdamu v duu spolu s basklarinetistou Jiřím
-                                    Porubiakem. Jako klavírní duo získali spolu s Miroslavem Míčem v roce 2019
+                                    Porubiakem. Jako klavírní duo získali spolu s Miroslavem Míčem v roce 2019
                                     Grand Prix na mezinárodní soutěži ve Varšavě a první cenu na mezinárodní
-                                    soutěži v Barceloně. V témže roce také podnikli koncertní turné na Taiwanu,
+                                    soutěži v Barceloně. V témže roce také podnikli koncertní turné na Taiwanu,
                                     pod záštitou Ministerstva zahraničních věcí. Pedagogicky působila na Fakultě
                                     umění Ostravské univerzity a na Janáčkově konzervatoři v Ostravě. V současné
                                     době se věnuje jak koncertní sólové hře, tak i interpretaci komorní hudby a
@@ -179,9 +179,9 @@
 
                         <div class="col-1-2">
                             <div class="wrap-col">
-                                <h1>Irina<br>Cherkashyna</h1>
+                                <h1>Irena<br>Andruško</h1>
                                 <img src="images/asher.jpg" alt="foto">
-                                <p>Irina Cherkashyena začala studovat hru na klavír v šesti letech ve třídě N.
+                                <p>Irena Andruško (roz. Irina Čerkašina) začala studovat hru na klavír v šesti letech ve třídě N.
 
                                     Avramenko na Střední odborné hudební škole v Charkově. Od počátku se
 
